perf: avoid reparsing uri in image proxy